# tradelog

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/plans/: architect-review-rev2.md  architect-review.md  critic-verdict-rev2.md  critic-verdict.md  open-questions.md  ralplan-tradelog-v1.md
.omc/sessions/: 26de0feb-821c-4aab-b12e-7e740f248320.json  ea52dc5a-98fe-4aa4-b693-b4c2f2473c69.json
.omc/specs/: deep-interview-tradelog.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_settings.sql  0003_market_note.sql  0004_defi.sql  0005_wisdom.sql  0006_stocks.sql
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  stock_quotes.rs
src/components/: BalanceDisplay.tsx  CumulativeReturn.tsx  DayDetailDrawer.tsx  DefiBoard.tsx  DefiPositionCard.tsx  DefiPositionDrawer.tsx  EquityCurve.tsx  GoalProgress.tsx  HeroSection.tsx  JournalFeed.tsx  LanguageToggle.tsx  MonthPickerPopover.tsx  MonthlyPnlBars.tsx  MonthlyStats.tsx  NoteCell.tsx  NoteEditor.tsx  PlaceholderView.tsx  PnlCalendar.tsx  Sidebar.tsx  StocksAllocation.tsx  StocksBoard.tsx  StocksGoalEditModal.tsx  StocksHero.tsx  StocksHoldingDrawer.tsx  StocksHoldingForm.tsx  StocksHoldingsTable.tsx  StocksNoteForm.tsx  StocksNotesFeed.tsx  StocksWatchlist.tsx  StocksWatchlistForm.tsx  TradingGrid.tsx  UpdateNotification.tsx  WisdomBoard.tsx  WisdomCard.tsx  WisdomDrawer.tsx
src/hooks/: useDefiPositions.ts  useSettings.ts  useStockHoldings.ts  useStockNotes.ts  useStockQuotes.ts  useStockWatches.ts  useTotalEquity.ts  useTradingDays.ts  useViewMode.ts  useWisdomNotes.ts
src/i18n/: index.ts  messages.ts
src/lib/: api.ts  compute.test.ts  compute.ts  dates.ts  paste-parser.test.ts  paste-parser.ts  stocksCompute.ts
src/styles/: globals.css  tokens.css
src/types/: defi.ts  stocks.ts  trading-day.ts  wisdom.ts
tasks/: todo.md
