[package]
name = "tradelog"
version = "0.1.8"
description = "TradeLog — macOS 매매일지 데스크탑 앱"
authors = ["cho.jaehan.lnxt@gmail.com"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tradelog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
parking_lot = "0.12"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
